--- a/config/twist_mux.yaml
+++ b/config/twist_mux.yaml
@@ -6,6 +6,6 @@ twist_mux:
         timeout : 0.5
         priority: 10
       joystick:
-        topic   : RosAria/cmd_vel
+        topic   : joy/cmd_vel
         timeout : 0.5
         priority: 100
